2007-09-19  Adam Schreiber  <sadam@clemson.edu>

    * configure.in: Fix Gedit compilation on 2.20. Patch from Gotz Waschk. 
    Fixes bug #478350
    * plugins/nautilus/seahorse-tool-progress.c: Fix compilation warning.

2007-09-19  Stef Walter  <stef@memberwebs.com>

	* configure.in: Release with proper version number 2.20.0

=== seahorse-2.20 ===

2007-09-17  Stef Walter  <stef@memberwebs.com>

	* README:
	* NEWS: 
	* configure.in: Release version 2.20 

2007-09-11  Claude Paroz  <claude@2xlibre.net>

	* plugins/applet/docs/Makefile.am: Added fr to DOC_LINGUAS.
	* plugins/applet/docs/fr/fr.po: Added French translation.

2007-09-06  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-prefs.c: Connect auto retreive check box to
    gconf.  Fixes bug #473940 

2007-09-04  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-gkeyring-item.c: Fix problem when building without
	SSH support. 

2007-09-04  Alessio Frusciante  <algol@firenze.linux.it>

	* plugins/applet/docs/Makefile.am: Added "it" (Italian) to
	DOC_LINGUAS.  
	* plugins/applet/docs/it/it.po: Addded Italian
	translation by Milo Casagrande <milo_casagrande@yahoo.it>.

2007-08-26  Daniel Nylander <po@danielnylander.se>

	* plugins/applet/docs/sv/sv.po: Updated Swedish translation

2007-08-26  Stef Walter  <stef@memberwebs.com>

	* configure.in: Bump version number
	
=== seahorse-2.19.91 ===

2007-08-26  Stef Walter  <stef@memberwebs.com>

    * NEWS:
    * README: Release 2.19.91

2007-08-22  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-prefs.glade: Remove needlessly translated strings.
	Patch by Claude Paroz. Fixes bug #469176

2007-08-21  Stef Walter  <stef@memberwebs.com>

    * agent/seahorse-agent-actions.c:
    * agent/seahorse-agent-cache.c: Fix badly placed semi-colons which 
    shortcircuit if()s. Patch by  Dave Jones. Fixes bug #467485
    
2007-08-21  Stef Walter  <stef@memberwebs.com>

    * src/seahorse-gkeyring-item.c: Properly escape any markup characters in 