@@ -1,5 +1,12 @@
 2007-09-19  Adam Schreiber  <sadam@clemson.edu>
 
+    * libseahorse/seahorse-combo-keys.c: Fix pointer usage. Patch from 
+    Michael Wolf
+    * libseahorse/seahorse-ssh-operation.c: Fix assertions.  Patch from 
+    Michael Wolf
+    * plugins/nautilus/seahorse-tool-files.c: Fix selection of package 
+    name. Patch from Michael Wolf
+    * src/seahorse-pgp-generate.c: Fix error text.  Patch from Michael Wolf
     * configure.in: Fix Gedit compilation on 2.20. Patch from Gotz Waschk. 
     Fixes bug #478350
     * plugins/nautilus/seahorse-tool-progress.c: Fix compilation warning.
